# ClipboardActions

./: .gitignore  CMakeLists.txt  ClipboardActions.sln  README.md  installer.nsi  vcpkg.json
.github/workflows/: cmake-single-platform.yml
ClipboardActions/: ClipboardActions.rc  ClipboardActions.vcxproj  ClipboardActions.vcxproj.filters  clipboard_actions.cpp  config.json  config_functions.hpp  config_parser.cpp  config_writer.hpp  gui_helpers.cpp  gui_helpers.hpp  parsed_application.cpp  registry_functions.cpp  resource.h  string_helpers.cpp  toast_handler.cpp  toast_handler.hpp
src/: ClipboardActions.rc  clipboard_handler.cpp  clipboard_handler.hpp  config_functions.cpp  config_functions.hpp  config_writer.cpp  gui_helpers.cpp  gui_helpers.hpp  main.cpp  parsed_application.cpp  parsed_application.hpp  parsed_apps.cpp  parsed_apps.hpp  profile.cpp  profile.hpp  program.cpp  program.hpp  registry_functions.cpp  registry_functions.hpp  resource.h  shared_vars.cpp  shared_vars.hpp  string_helpers.hpp
vcpkg/vcpkg/updates/: 0000000000  0000000001  0000000002  0000000003  0000000004  0000000005
vcpkg/x64-windows/share/nlohmann-json/: vcpkg.spdx.json  vcpkg_abi_info.txt
vcpkg/x64-windows/share/vcpkg-cmake/: vcpkg.spdx.json  vcpkg_abi_info.txt
vcpkg/x64-windows/share/vcpkg-cmake-config/: vcpkg.spdx.json  vcpkg_abi_info.txt
